cabal-version:       2.2

-- The name of the package.
name:                mixml

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0

-- A short (one-line) description of the package.
synopsis:            An implementation of MixML

-- A longer description of the package.
-- description:

-- URL for the project homepage or repository.
homepage:            https://github.com/elpinal/mixml

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              elpinal

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          elpinal@users.noreply.github.com

-- A copyright notice.
-- copyright:

category:            Language

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  README.md

library
  -- Modules exported by the library.
  -- exposed-modules:

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.12 && <4.13

  -- Directories containing source files.
  -- hs-source-dirs:

  -- Base language which the package is written in.
  default-language:    Haskell2010


common all
  default-language:    Haskell2010
  ghc-options:         -Wincomplete-patterns
  default-extensions:  ConstraintKinds
                     , DataKinds
                     , DeriveFunctor
                     , DeriveGeneric
                     , DerivingVia
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , OverloadedLists
                     , OverloadedStrings
                     , TypeFamilies
                     , TypeOperators

library shift
  import:              all
  build-depends:       base
                     , containers
  exposed-modules:     Shift
  hs-source-dirs:      shift


library ltg
  import:              all
  build-depends:       base
                     , shift
                     , containers
                     , freer-simple
                     , prettyprinter >= 1.2.1
                     , text >= 1.2.3.1
  exposed-modules:     Language.Modules.RD2013.LTG
  hs-source-dirs:      LTG
  ghc-options:         -Wno-simplifiable-class-constraints


library test-template
  import:              all
  build-depends:       base
                     , ltg
                     , template-haskell >= 2.14.0.0
                     , text
  exposed-modules:     Test.Template
  hs-source-dirs:      template


test-suite test-mixml
  import:              all
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:       base
                     , ltg
                     , shift
                     , test-template
                     , hspec >= 2.7.1
                     , freer-simple
                     , prettyprinter
                     , text
  other-modules:       Language.Modules.RD2013.LTGSpec
  hs-source-dirs:      test

executable mixml
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.12 && <4.13
                     , ltg

  -- Directories containing source files.
  -- hs-source-dirs:

  -- Base language which the package is written in.
  default-language:    Haskell2010

